syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.compliance;

// this line is used by starport scaffolding # proto/tx/import

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/compliance/types";

// Msg defines the Msg service.
service Msg {
      rpc CertifyModel(MsgCertifyModel) returns (MsgCertifyModelResponse);
  rpc RevokeModel(MsgRevokeModel) returns (MsgRevokeModelResponse);
  rpc ProvisionModel(MsgProvisionModel) returns (MsgProvisionModelResponse);
  rpc UpdateComplianceInfo(MsgUpdateComplianceInfo) returns (MsgUpdateComplianceInfoResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCertifyModel {
  string signer = 1 [(cosmos_proto.scalar) = "cosmos.AddressString", (gogoproto.moretags) = "validate:\"required\""];
  int32 vid = 2 [(gogoproto.moretags) = "validate:\"gte=1,lte=65535\""];
  int32 pid = 3 [(gogoproto.moretags) = "validate:\"gte=1,lte=65535\""];
  uint32 softwareVersion = 4;
  string softwareVersionString = 5 [(gogoproto.moretags) = "validate:\"required,max=64\""];
  uint32 cDVersionNumber = 6  [(gogoproto.moretags) = "validate:\"gte=0,lte=65535\""];
  string certificationDate = 7 [(gogoproto.moretags) = "validate:\"required\""];
  string certificationType = 8 [(gogoproto.moretags) = "validate:\"required,max=100\""];
  string reason = 9 [(gogoproto.moretags) = "validate:\"max=102400\""];
  string programTypeVersion = 10 [(gogoproto.moretags) = "validate:\"max=64\""];
  string cDCertificateId = 11 [(gogoproto.moretags) = "validate:\"required,max=64\""];
  string familyId = 12 [(gogoproto.moretags) = "validate:\"max=64\""];
  string supportedClusters = 13 [(gogoproto.moretags) = "validate:\"max=64\""];
  string compliantPlatformUsed = 14 [(gogoproto.moretags) = "validate:\"max=64\""];
  string compliantPlatformVersion = 15 [(gogoproto.moretags) = "validate:\"max=64\""];
  string OSVersion = 16 [(gogoproto.moretags) = "validate:\"max=64\""];
  string certificationRoute = 17 [(gogoproto.moretags) = "validate:\"max=64\""];
  string programType = 18 [(gogoproto.moretags) = "validate:\"max=64\""];
  string transport = 19 [(gogoproto.moretags) = "validate:\"max=64\""];
  string parentChild = 20 [(gogoproto.moretags) = "validate:\"max=64\""];
  string certificationIdOfSoftwareComponent = 21 [(gogoproto.moretags) = "validate:\"max=64\""];
}

message MsgCertifyModelResponse {
}

message MsgRevokeModel {
  string signer = 1 [(cosmos_proto.scalar) = "cosmos.AddressString", (gogoproto.moretags) = "validate:\"required\""];
  int32 vid = 2 [(gogoproto.moretags) = "validate:\"gte=1,lte=65535\""];
  int32 pid = 3 [(gogoproto.moretags) = "validate:\"gte=1,lte=65535\""];
  uint32 softwareVersion = 4;
  string softwareVersionString = 5 [(gogoproto.moretags) = "validate:\"required,max=64\""];
  uint32 cDVersionNumber = 6  [(gogoproto.moretags) = "validate:\"gte=0,lte=65535\""];  
  string revocationDate = 7 [(gogoproto.moretags) = "validate:\"required\""];
  string certificationType = 8 [(gogoproto.moretags) = "validate:\"required,max=100\""];
  string reason = 9 [(gogoproto.moretags) = "validate:\"max=102400\""];
}

message MsgRevokeModelResponse {
}

message MsgProvisionModel {
  string signer = 1 [(cosmos_proto.scalar) = "cosmos.AddressString", (gogoproto.moretags) = "validate:\"required\""];
  int32 vid = 2 [(gogoproto.moretags) = "validate:\"gte=1,lte=65535\""];
  int32 pid = 3 [(gogoproto.moretags) = "validate:\"gte=1,lte=65535\""];
  uint32 softwareVersion = 4;
  string softwareVersionString = 5 [(gogoproto.moretags) = "validate:\"required,max=64\""];
  uint32 cDVersionNumber = 6 [(gogoproto.moretags) = "validate:\"gte=0,lte=65535\""];
  string provisionalDate = 7 [(gogoproto.moretags) = "validate:\"required\""];
  string certificationType = 8 [(gogoproto.moretags) = "validate:\"required,max=100\""];
  string reason = 9 [(gogoproto.moretags) = "validate:\"max=102400\""];
  string programTypeVersion = 10 [(gogoproto.moretags) = "validate:\"max=64\""];
  string cDCertificateId = 11 [(gogoproto.moretags) = "validate:\"required,max=64\""];
  string familyId = 12 [(gogoproto.moretags) = "validate:\"max=64\""];
  string supportedClusters = 13 [(gogoproto.moretags) = "validate:\"max=64\""];
  string compliantPlatformUsed = 14 [(gogoproto.moretags) = "validate:\"max=64\""];
  string compliantPlatformVersion = 15 [(gogoproto.moretags) = "validate:\"max=64\""];
  string OSVersion = 16 [(gogoproto.moretags) = "validate:\"max=64\""];
  string certificationRoute = 17 [(gogoproto.moretags) = "validate:\"max=64\""];
  string programType = 18 [(gogoproto.moretags) = "validate:\"max=64\""];
  string transport = 19 [(gogoproto.moretags) = "validate:\"max=64\""];
  string parentChild = 20 [(gogoproto.moretags) = "validate:\"max=64\""];
  string certificationIdOfSoftwareComponent = 21 [(gogoproto.moretags) = "validate:\"max=64\""];
}

message MsgProvisionModelResponse {
}

message MsgUpdateComplianceInfo {
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString", (gogoproto.moretags) = "validate:\"required\""];
  int32 vid = 2 [(gogoproto.moretags) = "validate:\"gte=1,lte=65535\""]; 
  int32 pid = 3 [(gogoproto.moretags) = "validate:\"gte=1,lte=65535\""];
  uint32 softwareVersion = 4;
  string softwareVersionString = 5 [(gogoproto.moretags) = "validate:\"required,max=64\""];
  string certificationType = 6 [(gogoproto.moretags) = "validate:\"required,max=64\""];
  uint32 cDVersionNumber = 7 [(gogoproto.moretags) = "validate:\"gte=0,lte=65535\""]; 
  uint32 softwareVersionCertificationStatus = 8; 
  string date = 9; 
  string reason = 10 [(gogoproto.moretags) = "validate:\"max=102400\""]; 
  string owner = 11 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string cDCertificateId = 12 [(gogoproto.moretags) = "validate:\"required,max=64\""];
  string certificationRoute = 13 [(gogoproto.moretags) = "validate:\"max=64\""];
  string programType = 14 [(gogoproto.moretags) = "validate:\"max=64\""];
  string programTypeVersion = 15 [(gogoproto.moretags) = "validate:\"max=64\""];
  string compliantPlatformUsed = 16 [(gogoproto.moretags) = "validate:\"max=64\""];
  string compliantPlatformVersion = 17 [(gogoproto.moretags) = "validate:\"max=64\""];
  string transport = 18 [(gogoproto.moretags) = "validate:\"max=64\""];
  string familyId = 19 [(gogoproto.moretags) = "validate:\"max=64\""];
  string supportedClusters = 20 [(gogoproto.moretags) = "validate:\"max=64\""];
  string OSVersion = 21 [(gogoproto.moretags) = "validate:\"max=64\""];
  string parentChild = 22 [(gogoproto.moretags) = "validate:\"max=64\""];
  string certificationIdOfSoftwareComponent = 23 [(gogoproto.moretags) = "validate:\"max=64\""];
}

message MsgUpdateComplianceInfoResponse {
}

// this line is used by starport scaffolding # proto/tx/message